Fix z-index

--- a/src/assets/styles/components/canvas/_favorite.scss
+++ b/src/assets/styles/components/canvas/_favorite.scss
@@ -2,7 +2,7 @@
    position: fixed;
    top: 0;
    right: -100%;
-   z-index: 50;
+   z-index: 150;
    display: block;
    width: 100%;
    height: 100vh;
